--- a/requirements.txt
+++ b/requirements.txt
@@ -9,13 +9,20 @@ joblib
 catboost
 statsmodels
 sqlalchemy
+psycopg2-binary
 requests
-streamlit
+python-dotenv
 flask
 fastapi
 uvicorn
 pydantic
-python-dotenv
+streamlit
+streamlit-autorefresh
 jupyter
 ipykernel
-streamlit-autorefresh
+gpxpy
+geopandas
+shapely
+pyproj
+folium
+tqdm
